# sat-extractor

./: .gitignore  INSTRUCCIONES.md  README.md  config.example.toml  pyproject.toml  run.py  run.spec
satextractor/: __init__.py  __main__.py  config.py  fiscal.py  models.py
satextractor/auth/: fiel.py
satextractor/db/: connection.py  repository.py  schema.py
satextractor/download/: package.py  service.py
satextractor/export/: excel.py
satextractor/fiscal/: __init__.py  catalogo_sat.toml  clasificador.py  ia_fiscal.py  impuestos.py  reglas_deducciones.toml
satextractor/parser/: cfdi.py
satextractor/ui/: app.py  tui.py
tests/: sample_cfdi.xml
